Add slatedb-jna-j11: prove the Java-22 floor is removable via a JNA binding
The official io.slatedb:slatedb-uniffi binding is FFM/Panama (bytecode 66),
which forces JDK 22+. Verified against the clone + published JAR that this is
purely a packaging choice of uniffi-bindgen-java: the native lib exports a
plain C ABI, and UniFFI's Mozilla Kotlin backend targets it via JNA (Java 8+).

Regenerated the Kotlin/JNA binding from the v0.14.1 tag (so it matches the
published native lib), patched a uniffi-0.31 codegen bug (error variants
declare a `message` property colliding with Throwable.message; won't compile
on any kotlinc — 7 sites), added a Kotlin blocking bridge + plain-Java driver.
Builds to JVM 11 and RUNS real put/get + MEMTABLE flush + detached checkpoint
on JDK 11, 17, and 25 — no --enable-native-access, no --add-opens.

Docs: README §17 (packaging-choice analysis + fork-tax + decision), module
README, journal Phase 10, scorecard 9→10, ⚡ finding #8.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>